/signup: bugfix, button outside the screen on mobile devices

--- a/src/modules/auth/styles.css
+++ b/src/modules/auth/styles.css
@@ -2,6 +2,13 @@
     position: fixed;
 }
 
+@media screen and (max-width: 425px) {
+    .signup-module {
+        position: absolute;
+        overflow: hidden;
+    }
+}
+
 .doctor-signup-module {
     position: fixed;
 }
